--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -49,7 +49,9 @@
                             <a href="/users/sign-out" class="navbar_menu--links">
                                 <i class="fas fa-sign-out-alt fa-2x"></i>
                                 </a>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <i class="mssg fa fa-search fa-2x fa-2x" ></i>
+                            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <a href="/users/profile/<%= user._id %>">
 
                                 <% if(user.avatar){ %>
@@ -58,7 +60,7 @@
                                 <% }else {%>
                                 
                                     <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="40" height="40">
-                                <% } %>
+                                <% } %> -->
                           
                         </a>
                             <br>
