--- a/views/friend_requests.ejs
+++ b/views/friend_requests.ejs
@@ -6,13 +6,13 @@
 <br><br><br>
 <% for(wannaBeFriend of friendRequests){ %>
    
-  <div style="padding: 2%;background-color: black;color: #f95959;margin-left: 40%;width:20%;margin-top: 0%;border: 4px solid #f95959;padding-left: 5%;padding-right: 0%;">
+  <div style="padding: 2%;background-color: #f95959;color: black;margin-left: 40%;width:20%;margin-top: 0%;border: 4px solid black;padding-left: 5%;padding-right: 0%;">
 
     <% if(wannaBeFriend.user_id.avatar){ %>
         <img src="<%=wannaBeFriend.user_id.avatar %>" width="30%" height="30%" style="border-radius: 50%;border: 2px solid black;">
     <% }else {%>
     
-        <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="30%" height="30%">
+        <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png"  width="30%" height="30%" style="border-radius: 50%;border: 2px solid black;"">
     <% } %>
     
     <br>
