--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,6 @@
 
 <link rel="stylesheet" href="/css/chat_box.css">
 
-       
 
         <% if (!locals.user) {%>
           <div class="hero" >
@@ -71,115 +70,32 @@
               
                
                
-               
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+              <script>
+                $(document).ready(function(){
+                  $(".mssg").click(function(){
+                  $(".FRND").fadeToggle();
+                  
+                  });
+                });
+                </script>
                 
         
 
 
         <div id="home-container">
         <section id="feed-posts">
-          <div class="FRND"style="animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);background-color:#f95959;width:max-content;border-radius: 5px;padding: 2%;color: white;border: 4px solid black;margin-right:0% ;">
-            <div class=".boxContainer" style=" margin: auto;
-                
-            position: relative;
-            width:min-content;
-            border-radius: 30px;
-            padding: 0px 2%;
-            background-color: white;
-           
-            border: 4px solid black; ">
-            
-                <table class="elementsContainer" style="width:100%; height:100%; vertical-align:middle;">
-                <tr>
-                    <td>
-
-                
-                <form id="search-form" action="/users/search"  method="GET">
-                    
-                        <input type="text" name="name" placeholder="Find People" required class="search" style="border: none;
-                        padding: 5%;
-                        border-radius: 50px;
-                        font-weight: 500;
-                        outline: none;
-                        ">
-                    </td>
-                    <td>
-                        <!-- <a type="submit" id="searchbtn"> <i class="fa fa-search" style="color: tomato;"></i></a> -->
-                        <button type="submit" id="searchbtn" style="background-color: transparent;border: 0px;"><i class="fa fa-search " style="color: tomato;"></i></button>
-                    </td>
-                </form>
-            
-            </tr>
-            </table>
-            </div>
-            <br>
-            
-            <a class="nav-link" href="/users/profile/<%= locals.user.id %>"style="text-decoration: none;color: black;">
-              <h3><img class="frnds-img" src="images/user.png" height="30px">
-                User:<%= locals.user.name %></h3></a>
-            <br>
-            
-           
-              <a class="nav-link" href="/users/friends" style="text-decoration: none;color: black;"><h3>
-                <img class="frnds-img" src="images/f.png" height="30px">
-                My Friends</h3></a>
           
-            <br>
-              <a class="nav-link" href="/users/friend-requests" style="text-decoration: none;color: black;"><h3>
-                <img class="frnds-img" src="images/fr.png" height="30px">
-                Friend Requests</h3></a>
-         <br>
-         
-            <a class="nav-link" href="/friends/all" style="text-decoration: none;color: black;">
-              
-              <h3>
-                <img class="frnds-img" src="images/af.png" height="30px">
-                Add Friend</h3></a>
+          
+          
+       
+        
         
 
-          </div>
-        
           
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <br><br>
           <!-- <span class="Loader"></span> -->
         <!-- posts section $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ -->
-         <div class="post-avatar">
+         <div class="post-avatar" style="background-color:#f95959 ;color: black;border: 4px solid black;" >
            <br>
           <h2> Whats in your mind today <h2>
            
@@ -222,7 +138,7 @@
 
 
                 <li style="color: #1b789c;" id="post-<%= post._id %>">
-                  <br><br><br>
+                  <br>
                   <p>
                     <% if(post.user.avatar){ %>
                       <img  class="header-img"  src="<%=post.user.avatar%>" width="10%" height="10%" alt="" style="border:2px solid black;">
@@ -242,7 +158,7 @@
                     <br>
                     
                     
-                    <div class="pst" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid #00bbf0 ;padding: 15px;color: #1b789c;background-color: lightgray;">
+                    <div class="pst" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid #1b789c ;padding: 15px;background-color: lightgray;">
                       <%= post.user.name %> : <%= post.content %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     
                      <% if  ( locals.user && locals.user.id == post.user.id){ %>
@@ -254,8 +170,9 @@
  
                      </div>
                    
- 
-                    <img src="<%= post.avatar%>"  width="100%" height="100%" alt=" " style="background-size:cover"  box-shadow:0 2px 20px -3px black;>
+                     <br>
+                     <br>
+                    <img src="<%= post.avatar%>"  width="100%" height="100%" alt=" " style="background-size:cover;box-shadow:0 2px 20px -3px black;border-radius: 15px;border: 2px solid black;">
                     <br>
                     
 
@@ -287,10 +204,7 @@
                           <%= post.likes.length %>likes
                         <% } %>
                       </small>
-                   
-                    <br>
-                  
-                    <br>
+                 
                   </p>
 
 
@@ -309,10 +223,10 @@
                     <% if (locals.user){ %>
                         <form id="post-<%= post._id %>-comments-form" action="/comments/create" method="POST">
                           
-                            <div class="form_control" style="display:inline-block;">
+                            <div class="form_control" style="display:inline-block;width:50%;">
 
                            
-                            <input type="text" name="content" placeholder="Write comment..." required autofocus style="width: 100%;">
+                            <input type="text" name="content" placeholder="Write comment..." required autofocus style="width: 100%;border:4px solid #1b789c ;border-radius: 15px;background-color: lightgray;padding: 2%;color:#1b789c ;">
                             
                   
                         </div>
@@ -361,7 +275,7 @@
 
                        
                         
-                        <div class="cmnt" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid lime ;padding: 15px;color: #1b789c;background-color: lightgray">
+                        <div class="cmnt" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid #1b789c ;padding: 15px;background-color: lightgray">
                           
                           <%= comment.user.name %> :
 
@@ -419,11 +333,12 @@
           </div>
           
         </section>
+        
 
         <section id=user-friends>
           <br> <br>
           <img class="frnds-img" src="images/laugh.png" height="65px">
-          <h3 style="color:#ffcf7a;">
+          <h3 style="color:white;">
             
          All users</h3>
           <% for(u of all_users) {%>
@@ -439,7 +354,7 @@
 
              
 
-              <a style="color:#ffcf7a; ;text-decoration:none;"  href="/users/profile/<%= u.id %>"><%= u.name%></a>
+              <a style="color:white; ;text-decoration:none;"  href="/users/profile/<%= u.id %>"><%= u.name%></a>
               <div id='details'>
               <!-- <a href="/users/removefriend/?id=<%=u._id%>&type=<%=locals.user.id %>"><button class='UnFriend'>UnFriend</button></a> -->
             </div>
@@ -449,11 +364,83 @@
 
 
         </section>
+         
+        <div class="FRND"style="animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);background-color:#f95959;width:max-content;border-radius: 5px;padding: 2%;color: white;border: 4px solid black;margin-right:0% ;">
+            
+          <div class=".boxContainer" style=" margin: auto;
+              
+          position: relative;
+          width:min-content;
+          border-radius: 30px;
+          padding: 0px 2%;
+          background-color: white;
+         
+          border: 4px solid black;margin-bottom: 5%; ">
+          
+              <table class="elementsContainer" style="width:100%; height:100%; vertical-align:middle;">
+              <tr>
+                  <td>
+
+              
+              <form id="search-form" action="/users/search"  method="GET">
+                  
+                      <input type="text" name="name" placeholder="Find People" required class="search" style="border: none;
+                      padding: 5%;
+                      border-radius: 50px;
+                      font-weight: 500;
+                      outline: none;
+                      ">
+                  </td>
+                  <td>
+                      <!-- <a type="submit" id="searchbtn"> <i class="fa fa-search" style="color: tomato;"></i></a> -->
+                      <button type="submit" id="searchbtn" style="background-color: transparent;border: 0px;"><i class="fa fa-search fa-2x" style="color: tomato;"></i></button>
+                  </td>
+              </form>
+          
+          </tr>
+          </table>
+          </div>
+          <br>
+          
+          <a class="nav-link" href="/users/profile/<%= locals.user.id %>"style="text-decoration: none;color: black;">
+            <h3>
+              <% if(user.avatar){ %>
+                <img  class="header-img" alt="img"   src="<%=user.avatar%>" width="40" height="40" style="border:2px solid black;">
+           
+            <% }else {%>
+            
+                <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="45" height="45" style="border:2px solid black;">
+            <% } %>
+              User:<%= locals.user.name %></h3></a>
+          <br>
+          
+         
+            <a class="nav-link" href="/users/friends" style="text-decoration: none;color: black;"><h3>
+              <img class="frnds-img" src="images/f.png" height="30px">
+              My Friends</h3></a>
+        
+          <br>
+            <a class="nav-link" href="/users/friend-requests" style="text-decoration: none;color: black;"><h3>
+              <img class="frnds-img" src="images/fr.png" height="30px">
+              Friend Requests</h3></a>
+       <br>
+       
+          <a class="nav-link" href="/friends/all" style="text-decoration: none;color: black;">
+            
+            <h3>
+              <img class="frnds-img" src="images/af.png" height="30px">
+              Add Friend</h3></a>
+      
+
+        </div>
+     
 
         
    
       </div>
         <% }%>
+
+
        
     
 
