--- a/views/home.ejs
+++ b/views/home.ejs
@@ -365,7 +365,7 @@
 
         </section>
          
-        <div class="FRND"style="animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);background-color:#f95959;width:max-content;border-radius: 5px;padding: 2%;color: white;border: 4px solid black;margin-right:0% ;">
+        <div class="FRND"style="animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);background-color:#f95959;width:20%;border-radius: 5px;padding: 2%;color: white;border: 4px solid black;margin-right:0% ;">
             
           <div class=".boxContainer" style=" margin: auto;
               
