--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -458,6 +458,7 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     // bottom: 0;
     padding-left:5%;
     padding-right: 2.5%;
+    padding-bottom: 2%;
     text-decoration: none;
     color: white;
     // background-color: black;
@@ -561,7 +562,7 @@ input[type=file]::file-selector-button:hover {
     // border-radius: 10px;
     border-top-left-radius: 0%;
     border-bottom-left-radius: 0%;
-    margin-left: 22%;
+    margin-left: 0%;
   }
 
 
