--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -4,7 +4,7 @@
 
 <br><br>
 
-<div style="padding: 2%;background-color: black;color: white;margin-left: 40%;width:20%;margin-top: 0%;border-bottom: 2px solid white;padding-left: 5%;padding-right: 0%;">
+<div style="padding: 2%;background-color:#f95959 ;color: black;margin-left: 40%;width:20%;margin-top: 0%;border: 4px solid black;padding-left: 5%;padding-right: 0%;">
     <h2>Your Friends</h2>
     <br>
 
@@ -14,12 +14,12 @@
     <% if(friend.user_id.id==locals.user.id){ %>
 
         <% if(friend.friend_id.avatar ){ %>
-            <img src="<%= friend.friend_id.avatar %>" width="30%" height="30%" style="border-radius: 50%;">
+            <img src="<%= friend.friend_id.avatar %>" width="30%" height="30%" style="border-radius: 50%;border: 2px solid black;">
            
             
         <% }else {%>
         
-            <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="30%" height="30%">
+            <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="30%" height="30%;border:2px solid black">
             <% } %>
 
 
@@ -29,7 +29,7 @@
 
         
         <br>
-        <a href="/users/profile/<%= friend.friend_id._id %>" style="text-decoration: none;color: white;"><%= friend.friend_id.name %></a> 
+        <a href="/users/profile/<%= friend.friend_id._id %>" style="text-decoration: none;color: black;"><%= friend.friend_id.name %></a> 
         <br>
         <br>
         <a class="button" href="/friends/toggle-friend/<%= friend.friend_id._id %>" role="button" style="text-decoration: none;color: white;">Unfriend</a><br><br>
