--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -53,15 +53,15 @@
 
 <br>
    <!-- <img class ="profilepic" src="<%=profile_user.avatar%>" > -->
-   <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background: #f95959;border-radius: 10px;border: 3px solid black;margin-bottom: 2px;">
+   <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background: #f95959;border-radius: 10px;border: 3px solid black;margin-bottom: 2px;padding:3% 5%;">
     Name:<%= profile_user.name %>
     
-       <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background: #f95959;border-radius: 10px;border: 3px solid black;margin-bottom: 2px;">
+       <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background: #f95959;border-radius: 10px;border: 3px solid black;margin-bottom: 2px;padding:3% 1%;min-width:fit-content;">
        Email : <%= profile_user.email %></p>
 
 
        <% if(profile_user.bio) {%>
-           <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background: #f95959;border-radius: 10px;border: 3px solid black;margin-bottom: 2px;">
+           <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background: #f95959;border-radius: 10px;border: 3px solid black;margin-bottom: 2px;padding:3% 5%;">
                Bio : <%=profile_user.bio%></p>
 
           
@@ -235,16 +235,17 @@
         
     </div>
     
-    <div  style="background-color: lightgrey;max-width: 40%;min-width:40%;min-height:min-content;margin: auto;margin-bottom: 10%;border-radius: 10px;border: 4px solid black;box-shadow:0 2px 20px -3px black">
+    <div  style="background-color: lightgrey;max-width: 40%;min-width:40%;min-height:min-content;margin: auto;margin-bottom: 10%;border-radius: 10px;border: 4px solid black;box-shadow:0 2px 20px -3px black;margin-top: 10%;">
         <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;color: black;background: #f95959;border-radius: 5px;" >
             About
             
         </h1>
-        <p style="padding: 1%;color: black;">Hi there</p>
-            <p style="padding: 1%;color:cornflowerblue;">I have built a social media website using node js and mongo db and added google oauth to authenticate users.</p>
-            <p style="padding: 1%;color: #6d42c7;">You can Post images ,like images and comment too apart from this you also get email whenever some one comments on your post</p>
-            <p  style="padding: 1%;color: black;">You can add / remove friends as well</p>
-            <p style="padding: 1%;color: #f95959;">You can chat with your friends using chatroom.</p>
+        <p style="padding: 1%;color: black;margin: 2%;">Hi there</p>
+            <p style="padding: 1%;background-color:cornflowerblue;color:white;border: 3px solid black;margin-bottom: 2px;padding:3% 1%;min-width:fit-content;margin: 2%;border-radius: 10px;">I have built a social media website using node js and mongo db and added google oauth to authenticate users.</p>
+            <p style="padding: 1%;background-color: #6d42c7;color:white;border: 3px solid black;margin-bottom: 2px;padding:3% 1%;min-width:fit-content;margin: 2%;border-radius: 10px;">You can Post images ,like images and comment too apart from this you also get email whenever some one comments on your post</p>
+            <p  style="padding: 1%;background-color: orangered;color:black;border: 3px solid black;margin-bottom: 2px;padding:3% 1%;min-width:fit-content;margin: 2%;border-radius: 10px;">You can add / remove friends as well</p>
+            <p style="padding: 1%;background-color: black;color:white;border: 3px solid black;margin-bottom: 2px;padding:3% 1%;min-width:fit-content;margin: 2%;border-radius: 10px;">You can search users/friends</p>
+            <p style="padding: 1%;background-color: #f95959;color:black;border: 3px solid black;margin-bottom: 2px;padding:3% 1%;min-width:fit-content;margin: 2%;border-radius: 10px;">You can chat with your friends using chatroom.</p>
     </div>
 
 
