--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -34,7 +34,9 @@
 				padding-right: 35px;
                 color: black;
 				box-shadow: 3px 3px 3px 3px lightslategray;
-		    	background-color: #58d258;
+		    	background: #11998e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 				border-top-left-radius: 15px;
 				border-top-right-radius: 15px;
@@ -57,7 +59,10 @@
                 color: black;
 				// box-shadow: 3px 3px 3px 3px lightgray;
 				// box-shadow:0 5px 30px -5px black;
-    			background-color: #00bbf0;
+    			background: #00c6ff;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 				margin-bottom: 1.2%;
 				border-top-left-radius: 15px;
 				border-top-right-radius: 15px;
@@ -68,6 +73,7 @@
 
     }
     #chat-message-input-container{
+		padding-top: 2.5%;
 		// background-color: lightgray;
 		
 		border-top: 4px solid #6c5ce7;
