--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -295,14 +295,18 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     // width: 100%;
     // background: #00bbf0;
    
-    background: #00bbf0;
+    background: #00c6ff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     color: white;
     padding: 5px;
     font-family: inherit;
     font-size: 15px;
     border: 0;
-    border-radius: 5px;
+    border-radius: 15px;
     display: inline;
+    padding: 2%;
   
     box-shadow:0 2px 20px -3px black;
     
@@ -313,7 +317,10 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
   }
   .button:hover{
      
-      background: #42b883;
+    background: #11998e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
       color: black;
       transition: 1ms;
       transition: ease-in;
@@ -461,10 +468,22 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     padding-bottom: 2%;
     text-decoration: none;
     color: white;
+    background: #00c6ff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+
+
+
+
+
+
     // background-color: black;
-    background: #0575E6;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+//     background: #0575E6;  /* fallback for old browsers */
+// background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+// background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     margin-top: 0%;
 
