--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -45,7 +45,9 @@
          
    <% if(isFriend && user.id != profile_user.id){ %>
                
-    <h3 style="background-color: mediumspringgreen;border-radius: 15px;border: 3px solid black;">connected</h3>
+    <h3 style="  background: #11998e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;border-radius: 15px;border: 3px solid black;">connected</h3>
    
 <% } %>
 
