adding project files

--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -4,7 +4,7 @@
 
 
 
-<% if (locals.user){ %>
+<% if (profile_user){ %>
 
 		<body style="background-image: url(images/g.jpg);background-size: cover;
 		background-position: center;
