--- a/views/home.ejs
+++ b/views/home.ejs
@@ -463,8 +463,8 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
  
 <script src="/js/chat_engine.js"></script>
-<% if (locals.user){ %>
+<!-- <% if (locals.user){ %>
   <script>
       new ChatEngine('user-chat-box', '<%= locals.user.name %>')
   </script>
-  <% } %>
+  <% } %> -->
